--- a/app/feedback-app/docker-compose.yml
+++ b/app/feedback-app/docker-compose.yml
@@ -1,22 +1,47 @@
-version: '3.8'
+version: "3.9"
+
 services:
-  db:
-    image: postgres:15
+  postgres:
+    image: postgres:16
+    container_name: feedback-postgres
+    restart: unless-stopped
     environment:
-      POSTGRES_DB: feedback
-      POSTGRES_USER: feedback_user
-      POSTGRES_PASSWORD: change_me
-    volumes:
-      - db-data:/var/lib/postgresql/data
+      POSTGRES_DB: feedback_prod
+      POSTGRES_USER: feedback_app
+      POSTGRES_PASSWORD: strong_password_here
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U feedback_app -d feedback_prod"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   app:
-    build: .
+    build:
+      dockerfile: Dockerfile
+    image: feedback-app:latest
+    container_name: feedback-app
+    restart: unless-stopped
     depends_on:
-      - db
-    environment:
-      SPRING_PROFILES_ACTIVE: prod
+      postgres:
+        condition: service_healthy
     ports:
       - "8080:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: prod
+
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/feedback_prod
+      SPRING_DATASOURCE_USERNAME: feedback_app
+      SPRING_DATASOURCE_PASSWORD: strong_password_here
+
+      SPRING_JPA_HIBERNATE_DDL_AUTO: validate
+      SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.PostgreSQLDialect
+
+      SPRING_FLYWAY_ENABLED: "true"
+      SPRING_FLYWAY_BASELINE_ON_MIGRATE: "true"
+
 volumes:
-  db-data:
+  postgres_data:
