--- a/app/feedback-app/src/main/resources/application.yml
+++ b/app/feedback-app/src/main/resources/application.yml
@@ -1,20 +1,25 @@
 spring:
   application:
     name: feedback-app
-  datasource:
-    url: jdbc:h2:mem:feedbackdb;DB_CLOSE_DELAY=-1
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+
   jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
+    open-in-view: false
     properties:
       hibernate:
         format_sql: true
 
-logging:
-  level:
-    root: INFO
-    com.example: DEBUG
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    validate-on-migrate: true
+
+  profiles:
+    active: dev
+
+  mail:
+    host: localhost
+    port: 1025
+
+app:
+  user:
+    username: admin
