--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.passay</groupId>
+      <artifactId>passay</artifactId>
+      <version>1.6.6</version>
+    </dependency>
+
     <!-- Logging -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
